# pyGMCALab

./: .gitignore  README.md
cxxStarlet/: CMakeLists.txt
cxxStarlet/module/: pyStarlet.py
cxxStarlet/sparse2d/cxx/: NumPyArrayData.h  sparse2d.cpp  starlet2d.cpp  starlet2d.h
pyGMCA/: __init__.py  tobedone.py
pyGMCA/bss/: __init__.py
pyGMCA/bss/amca/: __init__.py  amca.py
pyGMCA/bss/bgmca/: bgmca.py
pyGMCA/bss/gmca/: gmca.py
pyGMCA/bss/hypgmca/: hypgmca.py
pyGMCA/bss/ngmca/: framework.py  standard.py  updaters.py
pyGMCA/bss/ngmca/base/: __init__.py  sample_nmr_spectra.py  tools.py
pyGMCA/bss/ngmca/base/algos/: __init__.py  framework.py  standard.py  updaters.py
pyGMCA/bss/ngmca/core/: __init__  __init__.py  algorithm.py  benchmark.py  tools.py
pyGMCA/bss/ngmca/munkres/: __init__.py
pyGMCA/bss/ngmca/proximal/: __init__.py  algorithms.py  operators.py
pyGMCA/bss/ngmca/tools/: sample_nmr_spectra.py  tools.py
pyGMCA/bss/rgmca/: AGMCA.py  BetaD_ICA.py  FunBetaD.py  data.py  errors.py  main.py  parameters.py  readMe.txt  rpcaAlgo.py
pyGMCA/bss/tr_rgmca/: XMCA.py  data.py  errors.py  main.py  outliersPursuit.py  parameters.py  readMe.txt
pyGMCA/bss/tr_rgmca/munkres/: PKG-INFO  setup.py
pyGMCA/common/: __init__.py  utils.py
pyGMCA/common/munkres/: setup.cfg
pyGMCA/common/prox/: Prox_SparsePositive.py
pyGMCA/common/wavelets/: pyStarlet.py
pyGMCA/data/: __init__.py
pyGMCA/scripts/bgmca/: launch_bGMCA.py  sample_nmr_spectra.py  script_bgmca.ipynb
pyGMCA/scripts/gmca/: script_example_1.py  script_rgmca.ipynb  script_tr_rgmca.ipynb
pyGMCA/scripts/gmca/.ipynb_checkpoints/: script_example_1-checkpoint.ipynb  script_gmca_amca-checkpoint.ipynb  script_ngmca-checkpoint.ipynb  script_ngmca_wave-checkpoint.ipynb  script_rgmca-checkpoint.ipynb
pyGMCA/scripts/hypgmca/: script_hypgmca.ipynb
pyGMCA/scripts/hypgmca/data/: Sources.fits  Spectra.fits
pyGMCA/scripts/ngmca/: __init__.py  example_bench.py  example_fb.py  example_ngmca.py  example_ngmca_wave.py
pyGMCA/scripts/ngmca/.ipynb_checkpoints/: script_ngmca-checkpoint.ipynb  script_ngmca_wave-checkpoint.ipynb
pyGMCA/scripts/ngmca/benchmarks/: bench_db_basic.py  bench_lambda.py
pyGMCA/scripts/rgmca/: __init__.py  example_bench.py  example_fb.py  script_rgmca.ipynb  script_rgmca.py  script_tr_rgmca.py
pyGMCA/scripts/rgmca/.ipynb_checkpoints/: script_rgmca-checkpoint.ipynb  script_tr_rgmca-checkpoint.ipynb
pyGMCA/scripts/rgmca/benchmarks/: bench_S_tau_mad_P5MC12_04déc14_1042_820818.bch  bench_db_basic.py  bench_lambda.py
redwave_toolbox/: __init__.py
redwave_toolbox/pyredwave/: CMakeLists.txt  __init__.py  setup.py
redwave_toolbox/pyredwave/pyredwave/: __init__.py  redwave.py
redwave_toolbox/pyredwave/pyredwave/cxx/: redWaveTools.cpp  redWaveTools.hpp  redwavecxx.cpp
redwave_toolbox/test_func/: test_redwave.py
